--- a/StudentManagementSpringDataJpaRest/src/main/resources/application.properties
+++ b/StudentManagementSpringDataJpaRest/src/main/resources/application.properties
@@ -1,13 +1,14 @@
 spring.application.name=StudentManagementSpringDataJpaRest
 server.port=6666
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.username=root
-spring.datasource.password=gow7tha8m0
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.username=root
+#spring.datasource.password=gow7tha8m0
+spring.config.import=optional:configserver:http://localhost:8888
 spring.datasource.url=jdbc:mysql://localhost:3306/cts1?createDatabaseIfNotExist=true
  
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
-spring.jpa.hibernate.ddl-auto=update
-management.endpoints.web.exposure.include=*
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+#spring.jpa.hibernate.ddl-auto=create
+#management.endpoints.web.exposure.include=*
 
 logging.file.name=logs/application.log
